# weather-chat

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_README.md  Dockerfile  FIREBASE_ENV_SETUP.md  GOOGLE_AUTH_SETUP.md  PROJECT_STATUS.md  README.md  deploy-production.sh  deploy.sh  docker-compose.yml  nginx.conf  render.yaml  requirements.txt  start.sh  test_local.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  database.py  env.example  pyproject.toml  requirements.txt  sync_deps.py  test_callback.py
backend/agent_system/src/multi_tool_agent/: agent.py  callbacks.py  prompt.py
backend/agent_system/src/multi_tool_agent/sub_agents/ask_for_plan/: agent.py  prompt.py
backend/agent_system/src/multi_tool_agent/sub_agents/get_weather/: agent.py  prompt.py
backend/agent_system/src/multi_tool_agent/sub_agents/plan_activities/: agent.py  prompt.py
backend/agent_system/src/multi_tool_agent/templates/: context_template.py  json_format.py
backend/agent_system/src/multi_tool_agent/tools/: get_current_weather.py  get_date.py  get_forecast.py  get_history_weather.py  get_session_id.py  get_session_unit_system.py  get_user_preferences.py  get_weather.py  get_week_day.py  systems_convert.py
backend/agent_system/src/utils/: load_env_data.py
backend/alembic/: env.py
backend/alembic/versions/: 82a7a885f60e_create_users_table.py
backend/api/: README.md  auth_service.py  chat_service.py  db.py  main.py  models.py  session_manager.py  weather_service.py
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package.json  (+1 more)
(+77 files in other folders)
